--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/Verwender/Desktop/Smuggyinfo/Godot_v4.2.1-stable_win64.exe"
+executable_path="D:/Smuggyinfo/Godot_v4.2.1-stable_win64.exe"
 use_advanced_connections=false
 
 [debug_options]
@@ -27,7 +27,7 @@ scripts=["res://addons/zylann.hterrain/hterrain.gd", "res://addons/zylann.hterra
 editor_settings=Rect2(342, 121, 675, 525)
 export=Rect2(342, 121, 675, 525)
 create_new_node=Rect2(342, 121, 675, 525)
-project_settings=Rect2(342, 121, 675, 525)
+project_settings=Rect2(0, 23, 1920, 1017)
 
 [script_setup]
 
